--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "~13.0.0-next.0",
     "@angular/platform-browser-dynamic": "~13.0.0-next.0",
     "@angular/router": "~13.0.0-next.0",
+    "@ng-idle/core": "^11.1.0",
+    "@ng-idle/keepalive": "^11.0.3",
+    "ngx-permissions": "^13.0.1",
     "rxjs": "~7.4.0",
     "sweetalert2": "^11.4.24",
     "tslib": "^2.3.0",
