--- a/package.json
+++ b/package.json
@@ -15,11 +15,23 @@
     "@angular/compiler": "~13.0.0-next.0",
     "@angular/core": "~13.0.0-next.0",
     "@angular/forms": "~13.0.0-next.0",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.0.0-next.0",
     "@angular/platform-browser-dynamic": "~13.0.0-next.0",
     "@angular/router": "~13.0.0-next.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@ng-idle/core": "^11.1.0",
+    "@ngbmodule/material-carousel": "^0.7.2",
+    "@popperjs/core": "^2.11.5",
+    "angular-search": "^0.2.1",
+    "bootstrap": "^5.2.0",
+    "filter-search": "^1.2.1",
+    "filters": "^1.0.6",
+    "jquery": "^3.6.0",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^6.0.2",
     "ngx-permissions": "^13.0.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
     "sweetalert2": "^11.4.24",
     "tslib": "^2.3.0",
